// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsonc > injectJsonc 1`] = `
"{
  // hello
  "one": 1,
  // world
  "two": {
    three: 3 // UwU
  },
  "four": [
    4,
    5,
    6
  ]
}"
`;

exports[`jsonc > injectJsonc 2`] = `
"{
  // hello
  "one": 1,
  "two": 2, // UwU
}"
`;

exports[`jsonc > injectJsonc 3`] = `
"{
  // hello
  "one": 1, // UwU
  "two": [
    2,
    3,
    4
  ]
}"
`;

exports[`jsonc > injectJsonc 4`] = `
"{
  // hello
  "one": 1,
  "two.three": [
    2,
    3
  ],
}"
`;
